z-index bug

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -230,7 +230,7 @@ p {
 }
 
 .social-media {
-  z-index: 101;
+  z-index: 102;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
